--- a/views/calculator.handlebars
+++ b/views/calculator.handlebars
@@ -2,9 +2,9 @@
     <form>
         <fieldset class="form-group">
             <div class="row">
-                <legend class="col-form-label col-sm-2 pt-0">Count the members of your household:
+                <legend class="col-form-label col-sm-5 pt-0">Count the members of your household:
                 </legend>
-                <div class="col-sm-10">
+                <div class="col-sm-7">
                     <div class="form-check">
                         <input class="form-check-input first" type="radio" name="gridRadios" value="14">
                         <label class="form-check-label" for="1">
@@ -17,9 +17,133 @@
                             1 other person
                         </label>
                     </div>
+                    <div class="form-check">
+                        <input class="form-check-input first" type="radio" name="gridRadios" value="10">
+                        <label class="form-check-label" for="3">
+                            2 other people
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input first" type="radio" name="gridRadios" value="8">
+                        <label class="form-check-label" for="4">
+                            3 other people
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input first" type="radio" name="gridRadios" value="6">
+                        <label class="form-check-label" for="5">
+                            4 other people
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input first" type="radio" name="gridRadios" value="4">
+                        <label class="form-check-label" for="6">
+                            5 other people
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input first" type="radio" name="gridRadios" value="2">
+                        <label class="form-check-label" for="7">
+                            More than 5 other people
+                        </label>
+                    </div>
                 </div>
             </div>
-
         </fieldset>
+        <fieldset class="form-group">
+            <div class="row">
+                <legend class="col-form-label col-sm-5 pt-0">Consider the size of your home:
+                </legend>
+                <div class="col-sm-7">
+                    <div class="form-check">
+                        <input class="form-check-input second" type="radio" name="gridRadios" value="2">
+                        <label class="form-check-label" for="1">
+                            Apartment
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input second" type="radio" name="gridRadios" value="4">
+                        <label class="form-check-label" for="2">
+                            Small house/townhouse
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input second" type="radio" name="gridRadios" value="7">
+                        <label class="form-check-label" for="3">
+                            Medium-sized house
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input second" type="radio" name="gridRadios" value="10">
+                        <label class="form-check-label" for="4">
+                            Large house
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+        <fieldset class="form-group">
+            <div class="row">
+                <legend class="col-form-label col-sm-5 pt-0">Evaluate your food choices:
+                </legend>
+                <div class="col-sm-7">
+                    <div class="form-check">
+                        <input class="form-check-input third" type="radio" name="gridRadios" value="10">
+                        <label class="form-check-label" for="1">
+                            Eat meat daily
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input third" type="radio" name="gridRadios" value="8">
+                        <label class="form-check-label" for="2">
+                            Eat meat 3 times a week or less
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input third" type="radio" name="gridRadios" value="4">
+                        <label class="form-check-label" for="3">
+                            Vegetarian
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input third" type="radio" name="gridRadios" value="2">
+                        <label class="form-check-label" for="4">
+                            Vegan
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+        <div class="form-group row">
+            <div class="form-check">
+                <input class="form-check-input third-half" type="checkbox" value="12">
+                <label class="form-check-label" for="1">
+                    Most of my food comes prepackaged (frozen meals, cereal, boxed snacks)
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input third-half" type="checkbox" value="6">
+                <label class="form-check-label" for="2">
+                    Balance of fresh and convenience foods
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input third-half" type="checkbox" value="2">
+                <label class="form-check-label" for="3">
+                    Consume mostly fresh, locally grown foods
+                </label>
+            </div>
+        </div>
+
+
+
+
+
+        
+        <div class="form-group row">
+            <div class="col-sm-10">
+            <button type="submit" class="btn btn-secondary">Calculate My Footprint</button>
+            </div>
+        </div>
     </form>
 </div>
