working on database connection

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,10 @@
 <h1>Footprint Calculations -- PLACEHOLDER</h1>
 
 <ul>
-  {{#each footprint}}
+  {{#each footprints}}
   <li>
     <p>
-      {{this.id}}. {{this.footprint}}
+      {{this.id}}. {{this.footprints}}
 
     </p>
   </li>
