--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,8 @@
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 		<link rel="stylesheet" href="/public/css/style.css" type="text/css"/>
+		<link rel="stylesheet" href="/public/css/light-bootstrap-dashboard.css" type="text/css"/>
+		<link rel="stylesheet" href="/public/css/bootstrap.min.css" type="text/css"/>
 			
 		<title>Live Your Green</title>
 
@@ -16,6 +18,7 @@
 
 		<script src="/public/js/app.js"></script>
 	</head>
+
 	<body>
 		{{{ body }}}
 	</body>
