survey is fully functioning!

--- a/views/calculator.handlebars
+++ b/views/calculator.handlebars
@@ -1,5 +1,5 @@
     <div class="container">
-        <form>
+        <form id="surveyId">
             <fieldset class="form-group1">
                 <div class="row">
                     <legend class="col-form-label col-sm-5 pt-0">Count the members of your household:
