--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,28 @@
-<form class="dashboard">
+
+
+
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/logout">
+        Logout
+      </a>
+    </div>
+  </div>
+</nav>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <h2>Welcome <span class="member-name"></span></h2>
+      </div>
+    </div>
+  </div>
+
+ 
+
+
+
+{{!-- <form class="dashboard">
     <div class="wrapper">
         <div class="sidebar" data-image="../public/img/sidebar-5.jpg">
             <!--
@@ -383,4 +407,4 @@
         });
     </script>
 
-</form>
+</form> --}}
