--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 
 
 
-  <nav class="navbar navbar-default">
+  {{!-- <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="/logout">
@@ -16,13 +16,13 @@
         <h2>Welcome <span class="member-name"></span></h2>
       </div>
     </div>
-  </div>
+  </div> --}}
 
  
 
 
 
-{{!-- <form class="dashboard">
+<form class="dashboard">
     <div class="wrapper">
         <div class="sidebar" data-image="../public/img/sidebar-5.jpg">
             <!--
@@ -141,7 +141,8 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#pablo">
-                                    <span class="no-icon">Log out</span>
+                                    {{!-- <span class="no-icon">Log out</span> --}}
+                                     <a class="no-icon navbar-brand" href="/logout">Logout</a>
                                 </a>
                             </li>
                         </ul>
@@ -407,4 +408,4 @@
         });
     </script>
 
-</form> --}}
+</form>
