--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,21 +5,30 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-		{{!-- <link rel="stylesheet" href="/css/style.css" type="text/css"/> --}}
 		<link rel="stylesheet" href="/assets/css/light-bootstrap-dashboard.css" type="text/css"/>
 		<link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css"/>
+		<link href="https://fonts.googleapis.com/css?family=Bad+Script|Kaushan+Script|Shadows+Into+Light+Two" rel="stylesheet">
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>
 			
 		<title>Live Your Green</title>
 
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-		<script src="https://code.jquery.com/jquery.js"></script>
-
-		<script src="/assets/js/app.js"></script>
+		
 	</head>
 
 	<body>
 		{{{ body }}}
 	</body>
+
+  		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+		<script src="https://code.jquery.com/jquery.js"></script>
+
+
+
+		<script src="/assets/js/app.js"></script>
+		<script src="/assets/js/login.js"></script>
+		<script src="/assets/js/signup.js"></script>
 </html>
