working on html for survey and header

--- a/public/assets/css/light-bootstrap-dashboard.css
+++ b/public/assets/css/light-bootstrap-dashboard.css
@@ -165,12 +165,12 @@ h1 .subtitle {
 
 .text-primary,
 .text-primary:hover {
-    color: #1D62F0 !important;
+    color:#93b793 !important;
 }
 
 .text-info,
 .text-info:hover {
-    color: #1DC7EA !important;
+    color: #93b793 !important;
 }
 
 .text-success,
