--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,14 +1,3 @@
-<<<<<<< HEAD
-nav {
-    padding: 10px;
-    margin: 10px;
-    background-color: #D1E0D1;
-};
-
-h2 {
-    margin-top: 30px;
-};
-=======
 body {
     background: url(/images/pexels-photo-305558mobile.jpeg);
     background-attachment: fixed;
@@ -75,4 +64,20 @@ body {
 #login {
     padding: 0, 20px;
 }
->>>>>>> 32b5b5ba0abd1240a9eead5ba97efaff89097250
+
+/* Survey styling */
+div.background {
+    background-color: #ffffff;
+    opacity: 0.75;
+    filter: alpha(opacity=60); 
+    padding: 20px;
+};
+  
+.subtitle {
+    /* font-family: 'Kaushan Script', cursive; */
+    font-family: 'Bad Script', cursive;
+    /* font-family: 'Shadows Into Light Two', cursive; */
+    font-size: 6rem;
+    
+};
+
