--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-		<link rel="stylesheet" href="/assets/css/light-bootstrap-dashboard.css" type="text/css"/>
+		{{!-- <link rel="stylesheet" href="/assets/css/light-bootstrap-dashboard.css" type="text/css"/> --}}
 		<link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css"/>
 		<link href="https://fonts.googleapis.com/css?family=Bad+Script|Kaushan+Script|Shadows+Into+Light+Two" rel="stylesheet">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css"/>
