--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,8 +2,8 @@
 
   <h1 class="display-4 title">Live Your Green</h1>
   <p class="lead">Sign up or sign in to use our carbon footprint calculator and recycling locaiton services.</p>
-  <p class="lead">Let the Live Your Green resources help you to evaluate your current energy use at home and on the go, and 
-    help you find ways to reduce your footprint.</p>
+  <p class="lead">Let the Live Your Green resources help you to evaluate your current energy use at home and on the go,</p> 
+  <p class="lead">and help you find ways to reduce your footprint.</p>
   <hr class="my-4">
 
   <div class="container">
