--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -71,13 +71,21 @@ div.background {
     opacity: 0.75;
     filter: alpha(opacity=60); 
     padding: 20px;
-};
+}
   
 .subtitle {
     /* font-family: 'Kaushan Script', cursive; */
     font-family: 'Bad Script', cursive;
     /* font-family: 'Shadows Into Light Two', cursive; */
-    font-size: 6rem;
+    font-size: 3rem;
     
-};
+}
+
+footer { 
+    width:100%; 
+    background-color: snow; 
+    min-height:250px; 
+    padding:25px 0px 10px 0px ;
+    margin-top: 20px;
+}
 
