building html for index page and adding chartjs

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -50,7 +50,7 @@ body {
     background-color: #376432;
     /* background-color: #446832; */
     /* border-color: #739e5e; */
-    border-color: black;
+    border-color: white;
     /* color: black; */
     margin: 0, 15px; 
 }
