--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,16 +25,17 @@
       <a href="footprints"><button class="btn btn-primary btn-lg">Calculate Your Carbon Footprint</button></a>
     </div>
     <div class="col-sm-4">
-        <canvas id="myChart"></canvas>
     </div>
   </div>
 </div>
 
 <div class="container-fluid bg-grey">
   <div class="row">
-    <div class="col-sm-4">
-    </div>
     <div class="col-sm-8">
+        <canvas id="myChart"></canvas>
+        <h2>chart goes here....</h2>
+    </div>
+    <div class="col-sm-4">
       <h2>How Your Footprint Compares</h2>
       <h4><strong>Your Footprint:</strong>{{totalFootprint}}</h4> 
       <p><strong>Average Footprint:</strong>60</p>
