working on chart.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,7 +32,7 @@
 <div class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-8">
-        <canvas id="myChart"></canvas>
+      <canvas id="myChart" width="400" height="400"></canvas>
         <h2>chart goes here....</h2>
     </div>
     <div class="col-sm-4">
