adding in tester code for chart

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,4 +31,6 @@
 		<script src="/assets/js/login.js"></script>
 		<script src="/assets/js/signup.js"></script>
 		<script src="/assets/js/chart.js"></script>
+		<script src="/assets/scripts/Chart.min.js"></script>
+
 </html>
