--- a/views/maps.handlebars
+++ b/views/maps.handlebars
@@ -1,4 +1,11 @@
     {{> header/header-block}}
+<form id="userInput">
+		<input type="text" class="form-control form-field" id="zipcode" required>
+		<button type="submit"> search </button>
+	</form>
+	<div class="result-container"></div>
+
+<script type="text/javascript" src="assets/js/maps.js"></script> 
 
 
 
