loading sample chart to the page

--- a/views/calculator.handlebars
+++ b/views/calculator.handlebars
@@ -124,8 +124,8 @@
                 </div>
                 <div class="form-group3">
                     <div class="row background">
-                        <select id="foodQ" class="custom-select fourth-half">
-                            <option selected>Where does your food come from?</option>
+                        <select id="foodQ" class="custom-select font-weight-bold fourth-half">
+                            <option class="lead" selected>Where does your food come from?</option>
                             <option value="12">Most of my food comes prepackaged (frozen meals, cereal, boxed snacks)</option>
                             <option value="6">Balance of fresh and convenience foods</option>
                             <option value="2">Consume mostly fresh, locally grown foods</option>
@@ -169,7 +169,7 @@
                 </div>
             
                 <div class="form-group4 row background">
-                    <select id="waterQ" class="custom-select fourth-half">
+                    <select id="waterQ" class="custom-select font-weight-bold fourth-half">
                         <option selected>Do you have both a washing machine and a dishwasher?</option>
                         <option value="2">Yes</option>
                         <option value="1">No</option>
