--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,16 +29,13 @@
   </div>
 </div>
 
-<div class="container-fluid bg-grey">
-  <div class="row">
-    <div class="col-sm-8">
-      <canvas id="myChart" width="400" height="400"></canvas>
-        <h2>chart goes here....</h2>
+<div class="container-fluid">
+  <div class="row ">
+    <div class="col-sm-5">
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-5 background">
       <h2>How Your Footprint Compares</h2>
-      <h4><strong>Your Footprint:</strong>{{totalFootprint}}</h4> 
-      <p><strong>Average Footprint:</strong>60</p>
+        <canvas id="myChart" width="100px" height="100px"></canvas>
     </div>
   </div>
 </div>
