working on index page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,7 @@
 
 		<script src="/assets/js/app.js"></script>
 		<script src="/assets/js/login.js"></script>
+		<script src="/assets/js/maps.js"></script>
 		<script src="/assets/js/signup.js"></script>
 		<script src="/assets/js/homeChart.js"></script>
 
