--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -97,3 +97,12 @@ footer {
     margin-top: 20px;
 }
 
+/* Index Page Styling */
+div.background2 {
+    background-color: #ffffff;
+    opacity: 0.75;
+    filter: alpha(opacity=95); 
+    border-radius: 25px;
+    padding: 20px;
+    margin: 20px;
+}
