--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -32,10 +32,25 @@
 
 <div class="container-fluid">
   <div class="row ">
-    <div class="col-sm-5">
-    </div>
-    <div class="col-sm-5 background">
-      <h2>How Your Footprint Compares</h2>
+    <div class="col-sm-6 background2">
+      <h2>Checklist To Reduce Your Footprint</h2>
+      <panel>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="Check1">
+          <label class="form-check-label" for="defaultCheck1">
+            Default checkbox
+          </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="Check2">
+            <label class="form-check-label" for="defaultCheck2">
+              checkbox
+            </label>
+          </div>
+        </panel>
+      </div>
+    <div class="col-sm-5 background2">
+      <h2>The World's Carbon Footprint (%)</h2>
         <canvas id="myChart" width="100px" height="100px"></canvas>
     </div>
   </div>
