--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,4 +31,5 @@
 		<script src="/assets/js/login.js"></script>
 		<script src="/assets/js/signup.js"></script>
 		<script src="/assets/js/chart.js"></script>
+		<script src="/assets/js/getuser.js"></script>
 </html>
