adding content for checklist

--- a/views/partials/footer/footer-block.handlebars
+++ b/views/partials/footer/footer-block.handlebars
@@ -10,9 +10,9 @@
                 <div class=" col-sm-4 col-md col-12 col">
                     <h5 class="headin5 pt2">Learn About Our Team</h5>
                         <ul class="footer_ul">
-                            <li><a class="resumeLink" href="http://www.github.com">Meghan Morris</a></li>
-                            <li><a class="resumeLink" href="http://www.github.com">Stephanie Manhart</a></li>
-                            <li><a class="resumeLink" href="http://www.github.com">Rhanie Halim</a></li>
+                            <li><a class="resumeLink" href="http://www.meghansmorris.com">Meghan Morris</a></li>
+                            <li><a class="resumeLink" href="https://smanhart.github.io/Portfolio/">Stephanie Manhart</a></li>
+                            <li><a class="resumeLink" href="https://github.com/rhaniehalim">Rhanie Halim</a></li>
                         </ul>
                 </div>
             </div>
