--- a/views/partials/header/header-block.handlebars
+++ b/views/partials/header/header-block.handlebars
@@ -15,7 +15,7 @@
         <a class="nav-link" href="recyclinglocations">Recycling Resources</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/">Log Out</a>
+        <a class="nav-link" href="/logout">Log Out</a>
       </li>
     </ul>
   </div>
