--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,15 +38,34 @@
         <div class="form-check">
           <input class="form-check-input" type="checkbox" id="Check1">
           <label class="form-check-label" for="defaultCheck1">
-            Default checkbox
+            Try eating meat less frequently. Each pound of beef takes more than 5,000 gallons of water to produce! <a href="https://www.huffingtonpost.com/entry/cutting-back-on-meat-consumption-could-help-end-hunger-by-2030-experts_us_55f3424ee4b077ca094f27a5">Learn more.</a>
           </label>
         </div>
         <div class="form-check">
             <input class="form-check-input" type="checkbox" id="Check2">
             <label class="form-check-label" for="defaultCheck2">
-              checkbox
+              Unplug your electronics unless you're using them. "Vampire power" contributes to nearly $19 billion in energy costs each year.
             </label>
           </div>
+          <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="Check3">
+          <label class="form-check-label" for="defaultCheck1">
+            Drive less! Choose to walk, bike or take public transit. If you do need to drive try to combine your errands. <a href="https://www.denver.org/about-denver/transportation/public-transportation/">Learn more about Denver's transit options.</a>
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="Check3">
+          <label class="form-check-label" for="defaultCheck1">
+            Spend less on fast fashion. Consider buying second-hand or quality items over the latest trends. <a href="https://www.treehugger.com/htgg/how-to-go-green-wardrobe.html">Learn more.</a>
+          </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="Check3">
+          <label class="form-check-label" for="defaultCheck1">
+            Plant a garden and shop local for produce and groceries. <a href="https://www.bhg.com/gardening/yard/garden-care/ten-steps-to-beginning-a-garden/">Read more about how to start your own garden.</a>
+          </label>
+        </div>
+        
         </panel>
       </div>
     <div class="col-sm-5 background2">
