--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-sm-8">
       <h3 class="title">Your Carbon Footprint Dashboard</h3>
-      <p>Once you've completed the carbon footprint calculation survey, your results will show up here. Take the survey again once you've taken steps to lower your carbon footprint to see your current score.</p>
+        <p class="lead"><strong>Once you've completed the carbon footprint calculation survey, your results will show up here. Take the survey again once you've taken steps to lower your carbon footprint to see your current score.</strong></p>
       <a href="footprints"><button class="btn btn-primary btn-lg">Calculate Your Carbon Footprint</button></a>
     </div>
     <div class="col-sm-4">
@@ -53,7 +53,7 @@
         </div>
         </panel>
       </div>
-    <div class="col-sm-5 background2">
+    <div class="col-sm-5 background3">
       <h2>The World's Carbon Footprint (%)</h2>
         <canvas id="myChart" width="100px" height="100px"></canvas>
     </div>
